Fix bug with filters